Update README.md
Added the build configuration to build the program.